kubernetes/main/infrastructure/components/internal-dns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: internal-dns
