kubernetes/main/infrastructure/components/longhorn.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn
