kubernetes/main/infrastructure/components/oauth2-proxy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oauth2-proxy
